# lab_10_dnn

./: CMakeLists.txt  README.md
lab_10_dnn/: Dnn_lab.cpp  Dnn_lab.h  main.cpp
lab_10_dnn_solution/: CMakeLists.txt  Dnn_lab.cpp
